Start with structuring

--- a/main.tex
+++ b/main.tex
@@ -111,13 +111,13 @@ headsepline, % Uncomment to get a line under the header
 \begin{minipage}[t]{0.4\textwidth}
 \begin{flushleft} \large
 \emph{Author:}\\
-\href{http://www.johnsmith.com}{\authorname} % Author name - remove the \href bracket to remove the link
+\href{https://www.linkedin.com/in/michael-h\%C3\%BCppe-1053b61a1/?originalSubdomain=de}{\authorname} % Author name - remove the \href bracket to remove the link
 \end{flushleft}
 \end{minipage}
 \begin{minipage}[t]{0.4\textwidth}
 \begin{flushright} \large
-\emph{Supervisor:} \\
-\href{http://www.jamessmith.com}{\supname} % Supervisor name - remove the \href bracket to remove the link  
+\emph{Supervisors:} \\
+\href{https://www.zbh.uni-hamburg.de/personen/mlbi/fkern.html}{\supname} % Supervisor name - remove the \href bracket to remove the link  
 \end{flushright}
 \end{minipage}\\[3cm]
  
@@ -168,9 +168,9 @@ headsepline, % Uncomment to get a line under the header
 
 \vspace*{0.2\textheight}
 
-\noindent\enquote{\itshape Thanks to my solid academic training, today I can write hundreds of words on virtually any topic without possessing a shred of information, which is how I got a good job in journalism.}\bigbreak
+\noindent\enquote{\itshape This one is for the boys with the booming system}\bigbreak
 
-\hfill Dave Barry
+\hfill Nicki Minaj
 
 %----------------------------------------------------------------------------------------
 %	ABSTRACT PAGE
@@ -257,11 +257,14 @@ $\omega$ & angular frequency & \si{\radian} \\
 % Include the chapters of the thesis as separate files from the Chapters folder
 % Uncomment the lines as you write the chapters
 
-\include{Chapters/Chapter1}
-%\include{Chapters/Chapter2} 
-%\include{Chapters/Chapter3}
-%\include{Chapters/Chapter4} 
-%\include{Chapters/Chapter5} 
+
+\include{Chapters/Introduction}
+\include{Chapters/Theory}
+\include{Chapters/Data}
+\include{Chapters/Methods}
+\include{Chapters/Results}
+\include{Chapters/Discussion}
+
 
 %----------------------------------------------------------------------------------------
 %	THESIS CONTENT - APPENDICES
