Include figures about the parsing quality

--- a/main.tex
+++ b/main.tex
@@ -82,7 +82,7 @@ headsepline, % Uncomment to get a line under the header
 	bottom=1.5cm, % Bottom margin
 	%showframe, % Uncomment to show how the type block is set on the page
 }
-
+\usepackage{tabularx}
 \usepackage{subcaption}
 
 \usepackage[toc, acronym]{glossaries}
