--- a/references.bib
+++ b/references.bib
@@ -469,4 +469,140 @@
   urldate   = {2025-11-17},
 }
 
+ 
+@Article{Abrahams2019,
+  author    = {Abrahams, G. J. and Newman, J.},
+  journal   = {Acta Crystallographica Section F: Structural Biology Communications},
+  title     = {{BLASTing} away preconceptions in crystallization trials},
+  year      = {2019},
+  issn      = {2053-230X},
+  month     = mar,
+  number    = {3},
+  pages     = {184--192},
+  volume    = {75},
+  abstract  = {Crystallization is in many cases a critical step for solving the three-dimensional structure of a protein molecule. Determining which set of chemicals to use in the initial screen is typically agnostic of the protein under investigation; however, crystallization efficiency could potentially be improved if this were not the case. Previous work has assumed that sequence similarity may provide useful information about appropriate crystallization cocktails; however, the authors are not aware of any quantitative verification of this assumption. This research investigates whether, given current information, one can detect any correlation between sequence similarity and crystallization cocktails. BLAST was used to quantitate the similarity between protein sequences in the Protein Data Bank, and this was compared with three estimations of the chemical similarities of the respective crystallization cocktails. No correlation was detected between proteins of similar (but not identical) sequence and their crystallization cocktails, suggesting that methods of determining screens based on this assumption are unlikely to result in screens that are better than those currently in use.},
+  doi       = {10.1107/S2053230X19000141},
+  file      = {Full Text PDF:https\://journals.iucr.org/f/issues/2019/03/00/rl5170/rl5170.pdf:application/pdf},
+  language  = {en},
+  publisher = {International Union of Crystallography},
+  url       = {https://journals.iucr.org/f/issues/2019/03/00/rl5170/},
+  urldate   = {2025-11-20},
+}
+
+ 
+@Article{Kirkwood2015a,
+  author   = {Kirkwood, Jobie and Hargreaves, David and O'Keefe, Simon and Wilson, Julie},
+  journal  = {Acta Crystallographica. Section F, Structural Biology Communications},
+  title    = {Analysis of crystallization data in the {Protein} {Data} {Bank}},
+  year     = {2015},
+  issn     = {2053-230X},
+  month    = oct,
+  number   = {Pt 10},
+  pages    = {1228--1234},
+  volume   = {71},
+  abstract = {The Protein Data Bank (PDB) is the largest available repository of solved protein structures and contains a wealth of information on successful crystallization. Many centres have used their own experimental data to draw conclusions about proteins and the conditions in which they crystallize. Here, data from the PDB were used to reanalyse some of these results. The most successful crystallization reagents were identified, the link between solution pH and the isoelectric point of the protein was investigated and the possibility of predicting whether a protein will crystallize was explored.},
+  doi      = {10.1107/S2053230X15014892},
+  keywords = {Ammonium Sulfate, Crystallization, Databases, Protein, Hydrogen-Ion Concentration, Isoelectric Point, Polyethylene Glycols, Statistics as Topic, PDB, crystallization, data, database, isoelectric point, pH, proteins, statistics},
+  language = {eng},
+  pmcid    = {PMC4601584},
+  pmid     = {26457511},
+}
+
+ 
+@Article{Fazio2014,
+  author   = {Fazio, Vincent J. and Peat, Thomas S. and Newman, Janet},
+  journal  = {Acta Crystallographica. Section F, Structural Biology Communications},
+  title    = {A drunken search in crystallization space},
+  year     = {2014},
+  issn     = {2053-230X},
+  month    = oct,
+  number   = {Pt 10},
+  pages    = {1303--1311},
+  volume   = {70},
+  abstract = {The REMARK280 field of the Protein Data Bank is the richest open source of successful crystallization information. The REMARK280 field is optional and currently uncurated, so significant effort needs to be applied to extract reliable data. There are well over 15 000 crystallization conditions available commercially from 12 different vendors. After putting the PDB crystallization information and the commercial cocktail data into a consistent format, these data are used to extract information about the overlap between the two sets of crystallization conditions. An estimation is made as to which commercially available conditions are most appropriate for producing well diffracting crystals by looking at which commercial conditions are found unchanged (or almost unchanged) in the PDB. Further analyses include which commercial kits are the most appropriate for shotgun or more traditional approaches to crystallization screening. This analysis suggests that almost 40\% of the crystallization conditions found currently in the PDB are identical or very similar to a commercial condition.},
+  doi      = {10.1107/S2053230X1401841X},
+  keywords = {Crystallization, Crystallography, X-Ray, Models, Molecular, Proteins, Solutions, crystallization, crystallization space},
+  language = {eng},
+  pmcid    = {PMC4188070},
+  pmid     = {25286930},
+}
+
+ 
+@Article{Rupp2004,
+  author   = {Rupp, Bernhard and Wang, Junwen},
+  journal  = {Methods},
+  title    = {Predictive models for protein crystallization},
+  year     = {2004},
+  issn     = {1046-2023},
+  month    = nov,
+  number   = {3},
+  pages    = {390--407},
+  volume   = {34},
+  abstract = {Crystallization of proteins is a nontrivial task, and despite the substantial efforts in robotic automation, crystallization screening is still largely based on trial-and-error sampling of a limited subset of suitable reagents and experimental parameters. Funding of high throughput crystallography pilot projects through the NIH Protein Structure Initiative provides the opportunity to collect crystallization data in a comprehensive and statistically valid form. Data mining and machine learning algorithms thus have the potential to deliver predictive models for protein crystallization. However, the underlying complex physical reality of crystallization, combined with a generally ill-defined and sparsely populated sampling space, and inconsistent scoring and annotation make the development of predictive models non-trivial. We discuss the conceptual problems, and review strengths and limitations of current approaches towards crystallization prediction, emphasizing the importance of comprehensive and valid sampling protocols. In view of limited overlap in techniques and sampling parameters between the publicly funded high throughput crystallography initiatives, exchange of information and standardization should be encouraged, aiming to effectively integrate data mining and machine learning efforts into a comprehensive predictive framework for protein crystallization. Similar experimental design and knowledge discovery strategies should be applied to valid analysis and prediction of protein expression, solubilization, and purification, as well as crystal handling and cryo-protection.},
+  doi      = {10.1016/j.ymeth.2004.03.031},
+  file     = {ScienceDirect Full Text PDF:https\://www.sciencedirect.com/science/article/pii/S1046202304001203/pdfft?download=true:application/pdf},
+  keywords = {High throughput crystallization, Statistical analysis, Machine learning, Structural genomics, Predictive models},
+  series   = {Macromolecular {Crystallization}},
+  url      = {https://www.sciencedirect.com/science/article/pii/S1046202304001203},
+  urldate  = {2025-11-20},
+}
+
+ 
+@Article{Overton2008,
+  author     = {Overton, Ian M. and Padovani, Gianandrea and Girolami, Mark A. and Barton, Geoffrey J.},
+  journal    = {Bioinformatics},
+  title      = {{ParCrys}: a {Parzen} window density estimation approach to protein crystallization propensity prediction},
+  year       = {2008},
+  issn       = {1367-4803},
+  month      = apr,
+  number     = {7},
+  pages      = {901--907},
+  volume     = {24},
+  abstract   = {The ability to rank proteins by their likely success in crystallization is useful in current Structural Biology efforts and in particular in high-throughput Structural Genomics initiatives. We present ParCrys, a Parzen Window approach to estimate a protein's propensity to produce diffraction-quality crystals. The Protein Data Bank (PDB) provided training data whilst the databases TargetDB and PepcDB were used to define feature selection data as well as test data independent of feature selection and training. ParCrys outperforms the OB-Score, SECRET and CRYSTALP on the data examined, with accuracy and Matthews correlation coefficient values of 79.1\% and 0.582, respectively (74.0\% and 0.227, respectively, on data with a ‘real-world’ ratio of positive:negative examples). ParCrys predictions and associated data are available from www.compbio.dundee.ac.uk/parcrys.Contact:  geoff@compbio.dundee.ac.ukSupplementary information: Supplementary data are available at Bioinformatics online.},
+  doi        = {10.1093/bioinformatics/btn055},
+  file       = {Full Text PDF:https\://academic.oup.com/bioinformatics/article-pdf/24/7/901/49046585/bioinformatics_24_7_901.pdf:application/pdf},
+  shorttitle = {{ParCrys}},
+  url        = {https://doi.org/10.1093/bioinformatics/btn055},
+  urldate    = {2025-11-20},
+}
+
+ 
+@Article{Kimber2003,
+  author     = {Kimber, Matthew S. and Vallee, François and Houston, Simon and Nečakov, Alexander and Skarina, Tatiana and Evdokimova, Elena and Beasley, Steven and Christendat, Dinesh and Savchenko, Alexei and Arrowsmith, Cheryl H. and Vedadi, Masoud and Gerstein, Mark and Edwards, Aled M.},
+  journal    = {Proteins: Structure, Function, and Bioinformatics},
+  title      = {Data mining crystallization databases: {Knowledge}-based approaches to optimize protein crystal screens},
+  year       = {2003},
+  issn       = {1097-0134},
+  number     = {4},
+  pages      = {562--568},
+  volume     = {51},
+  abstract   = {Protein crystallization is a major bottleneck in protein X-ray crystallography, the workhorse of most structural proteomics projects. Because the principles that govern protein crystallization are too poorly understood to allow them to be used in a strongly predictive sense, the most common crystallization strategy entails screening a wide variety of solution conditions to identify the small subset that will support crystal nucleation and growth. We tested the hypothesis that more efficient crystallization strategies could be formulated by extracting useful patterns and correlations from the large data sets of crystallization trials created in structural proteomics projects. A database of crystallization conditions was constructed for 755 different proteins purified and crystallized under uniform conditions. Forty-five percent of the proteins formed crystals. Data mining identified the conditions that crystallize the most proteins, revealed that many conditions are highly correlated in their behavior, and showed that the crystallization success rate is markedly dependent on the organism from which proteins derive. Of the proteins that crystallized in a 48-condition experiment, 60\% could be crystallized in as few as 6 conditions and 94\% in 24 conditions. Consideration of the full range of information coming from crystal screening trials allows one to design screens that are maximally productive while consuming minimal resources, and also suggests further useful conditions for extending existing screens. Proteins 2003;51:562–568. © 2003 Wiley-Liss, Inc.},
+  copyright  = {Copyright © 2003 Wiley-Liss, Inc.},
+  doi        = {10.1002/prot.10340},
+  file       = {Full Text PDF:https\://onlinelibrary.wiley.com/doi/pdfdirect/10.1002/prot.10340:application/pdf},
+  keywords   = {crystal screening, crystallization, data mining, structural proteomics},
+  language   = {en},
+  shorttitle = {Data mining crystallization databases},
+  url        = {https://onlinelibrary.wiley.com/doi/abs/10.1002/prot.10340},
+  urldate    = {2025-11-20},
+}
+
+ 
+@Article{Peat2005,
+  author   = {Peat, Thomas S. and Christopher, Jon A. and Newman, Janet},
+  journal  = {Acta Crystallographica. Section D, Biological Crystallography},
+  title    = {Tapping the {Protein} {Data} {Bank} for crystallization information},
+  year     = {2005},
+  issn     = {0907-4449},
+  month    = dec,
+  number   = {Pt 12},
+  pages    = {1662--1669},
+  volume   = {61},
+  abstract = {A database application has been developed for the collection of crystallographic information. This database (the BDP) has been populated with the information found in the Protein Data Bank (PDB). The tool has been used to store crystallization data parsed out of the PDB and these data may be used to extend the crystallization information found in the Biological Macromolecule Crystallization Database (BMCD) and could be used to refine crystallization methodology. A standard is proposed for describing a crystallization experiment that will ease future crystallization data collations and analyses.},
+  doi      = {10.1107/S0907444905033202},
+  keywords = {Ammonium Sulfate, Crystallization, Crystallography, X-Ray, Database Management Systems, Databases, Factual, Databases, Protein, Polyethylene Glycols, Terminology as Topic},
+  language = {eng},
+  pmid     = {16301801},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
