Add some figures for cocktail analysis and write the parsing section

--- a/main.tex
+++ b/main.tex
@@ -84,6 +84,7 @@ headsepline, % Uncomment to get a line under the header
 }
 \usepackage{tabularx}
 \usepackage{subcaption}
+\captionsetup[subfigure]{list=true}
 
 \usepackage[toc, acronym]{glossaries}
 \renewcommand{\glsnamefont}[1]{\textbf{#1}}
