Add univariate analysis intro

--- a/main.tex
+++ b/main.tex
@@ -89,6 +89,7 @@ headsepline, % Uncomment to get a line under the header
 \usepackage[toc, acronym]{glossaries}
 \renewcommand{\glsnamefont}[1]{\textbf{#1}}
 \newcommand{\roughly}{\raisebox{0.1ex}{\textasciitilde}}
+\providecommand*{\subsubsectionautorefname}{Subsubsection}
 
 \usepackage{subcaption}
 % Generate the glossary
