Write new section

--- a/Appendices/AppendixA.tex
+++ b/Appendices/AppendixA.tex
@@ -1,3 +1,11 @@
 % Appendix A
 
-\chapter{Data Appendix}
+\chapter{Data Appendix}\label{app:data}
+
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=1\linewidth]{../msc-thesis-code/data/dataExploration/plots/employmentMethodDistribution}
+	\caption[Most common crystallization methods]{A visualization of the most common methods employed to crystallize a protein. There is virtually no variation in method with more than 95\% of entries being crystallized using a variation of vapor diffusion.}
+	
+	\label{fig:employmentMethodDistribution}
+\end{figure}
