--- a/Misc/acronyms.tex
+++ b/Misc/acronyms.tex
@@ -3,3 +3,5 @@
 \newacronym{mascl}{MASCL}{Molecular Assembly Simulation in Crystal Lattice}
 
 \newacronym{pdb}{PDB}{\href{https://www.rcsb.org/}{Protein Data Bank}}
+
+\newacronym{peg}{PEG}{Polyethylene glycol}
