Finish data analysis and start on feature engineering

--- a/Appendices/AppendixA.tex
+++ b/Appendices/AppendixA.tex
@@ -9,3 +9,103 @@
 	
 	\label{fig:employmentMethodDistribution}
 \end{figure}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=1\linewidth]{../msc-thesis-code/data/dataExploration/plots/correlation_ph_temp}
+	\caption[Temperature / pH correlation with surface features]{Correlation matrix displaying correlation factors for the temperature and pH. Label values do not exhibit strong correlations directly with any of the features. However, there are some correlation between surface features as well.}
+	\label{fig:correlationphtemp}
+\end{figure}
+
+
+\begin{figure}[h!]
+	\centering		
+	\begin{subfigure}[t]{0.49\linewidth}
+		\centering
+		\includegraphics[width=\linewidth]{../msc-thesis-code/data/dataExploration/plots/net_charge_normalizedVsChem}
+		\caption[Distributions normalized surface net charge]{ }
+		\label{fig:net_charge_normalizedVsChem}
+	\end{subfigure}
+	\hspace{0.1cm}
+	\begin{subfigure}[t]{0.49\linewidth}
+		\centering
+		\includegraphics[width=\linewidth]{../msc-thesis-code/data/dataExploration/plots/surface_entropy_fractionVsChem}
+		\caption[Distributions surface entropy]{ }
+		\label{fig:hydrophobic_surface_fractionVsChem}
+	\end{subfigure}
+	\begin{subfigure}[t]{0.49\linewidth}
+		\centering
+		\includegraphics[width=\linewidth]{../msc-thesis-code/data/dataExploration/plots/sasa_skewnessVsChem}
+		\caption[Distributions SASA skewness]{ }
+		\label{fig:sasa_skewnessVsChem}
+	\end{subfigure}
+	\hspace{0.1cm}
+	\begin{subfigure}[t]{0.49\linewidth}
+		\centering
+		\includegraphics[width=\linewidth]{../msc-thesis-code/data/dataExploration/plots/sidechain_fractionVsChem}
+		\caption[Distributions side chain fraction]{ }
+		\label{fig:sidechain_fractionVsChem}
+	\end{subfigure}
+	\begin{subfigure}[t]{0.49\linewidth}
+		\centering
+		\includegraphics[width=\linewidth]{../msc-thesis-code/data/dataExploration/plots/roughnessVsChem}
+		\caption[Distributions normalized roughness]{ }
+		\label{fig:roughnessVsChem}
+	\end{subfigure}
+	\hspace{0.1cm}
+	\begin{subfigure}[t]{0.49\linewidth}
+		\centering
+		\includegraphics[width=\linewidth]{../msc-thesis-code/data/dataExploration/plots/hydro_polar_contrastVsChem}
+		\caption[Distributions hydro polar contrast]{ }
+		\label{fig:hydro_polar_contrastVsChem}
+	\end{subfigure}
+	\caption[Surface feature distributions]{
+		Distributions of different chemicals for different surface features}
+	\label{fig:surfaceFeatureChemicalDistributions}
+\end{figure}
+
+\begin{figure}[h!]
+	\centering		
+	\begin{subfigure}[t]{0.49\linewidth}
+		\centering
+		\includegraphics[width=\linewidth]{../msc-thesis-code/data/dataExploration/plots/net_charge_normalized_ks_distance}
+		\caption[Distributions normalized surface net charge]{ }
+		\label{fig:net_charge_normalized_ks_distance}
+	\end{subfigure}
+	\hspace{0.1cm}
+	\begin{subfigure}[t]{0.49\linewidth}
+		\centering
+		\includegraphics[width=\linewidth]{../msc-thesis-code/data/dataExploration/plots/surface_entropy_fraction_ks_distance}
+		\caption[Distributions surface entropy]{ }
+		\label{fig:hydrophobic_surface_fraction_ks_distance}
+	\end{subfigure}
+	\begin{subfigure}[t]{0.49\linewidth}
+		\centering
+		\includegraphics[width=\linewidth]{../msc-thesis-code/data/dataExploration/plots/sasa_skewness_ks_distance}
+		\caption[Distributions SASA skewness]{ }
+		\label{fig:sasa_skewness_ks_distance}
+	\end{subfigure}
+	\hspace{0.1cm}
+	\begin{subfigure}[t]{0.49\linewidth}
+		\centering
+		\includegraphics[width=\linewidth]{../msc-thesis-code/data/dataExploration/plots/sidechain_fraction_ks_distance}
+		\caption[Distributions side chain fraction]{ }
+		\label{fig:sidechain_fraction_ks_distance}
+	\end{subfigure}
+	\begin{subfigure}[t]{0.49\linewidth}
+		\centering
+		\includegraphics[width=\linewidth]{../msc-thesis-code/data/dataExploration/plots/roughness_ks_distance}
+		\caption[Distributions normalized roughness]{ }
+		\label{fig:roughness_ks_distance}
+	\end{subfigure}
+	\hspace{0.1cm}
+	\begin{subfigure}[t]{0.49\linewidth}
+		\centering
+		\includegraphics[width=\linewidth]{../msc-thesis-code/data/dataExploration/plots/hydro_polar_contrast_ks_distance}
+		\caption[Distributions hydro polar contrast]{ }
+		\label{fig:hydro_polar_contrast_ks_distance}
+	\end{subfigure}
+	\caption[Surface feature distributions]{
+		Distributions of different chemicals for different surface features}
+	\label{fig:surfaceFeatureKsDistance}
+\end{figure}
