--- a/Misc/acronyms.tex
+++ b/Misc/acronyms.tex
@@ -5,3 +5,13 @@
 \newacronym{pdb}{PDB}{\href{https://www.rcsb.org/}{Protein Data Bank}}
 
 \newacronym{peg}{PEG}{Polyethylene glycol}
+
+\newacronym{ks}{KS}{Kolmogorov–Smirnov}
+
+\newacronym{crims}{CRIMS}{Crystallization Information Management System}
+
+\newacronym{embl}{EMBL}{European Molecular Biology Laboratory}
+
+\newacronym{esm}{ESM}{Evolutionary Scale Model}
+
+\newacronym{bert}{BERT}{Bidirectional Encoder Representations from Transformers}
