--- a/references.bib
+++ b/references.bib
@@ -605,4 +605,40 @@
   pmid     = {16301801},
 }
 
+ 
+@Article{King2024,
+  author     = {King, Oliver N. F. and Levik, Karl E. and Sandy, James and Basham, Mark},
+  journal    = {Acta Crystallographica Section D: Structural Biology},
+  title      = {{CHiMP}: deep-learning tools trained on protein crystallization micrographs to enable automation of experiments},
+  year       = {2024},
+  issn       = {2059-7983},
+  month      = oct,
+  number     = {Pt 10},
+  pages      = {744--764},
+  volume     = {80},
+  abstract   = {A description is given of new deep-learning tools that analyse experimental micrographs of crystallization experiments to enable the automation of outcome classification, crystal detection and determination of locations to dispense compounds for fragment-based drug discovery at Diamond Light Source., A group of three deep-learning tools, referred to collectively as CHiMP (Crystal Hits in My Plate), were created for analysis of micrographs of protein crystallization experiments at the Diamond Light Source (DLS) synchrotron, UK. The first tool, a classification network, assigns images into categories relating to experimental outcomes. The other two tools are networks that perform both object detection and instance segmentation, resulting in masks of individual crystals in the first case and masks of crystallization droplets in addition to crystals in the second case, allowing the positions and sizes of these entities to be recorded. The creation of these tools used transfer learning, where weights from a pre-trained deep-learning network were used as a starting point and repurposed by further training on a relatively small set of data. Two of the tools are now integrated at the VMXi macromolecular crystallography beamline at DLS, where they have the potential to absolve the need for any user input, both for monitoring crystallization experiments and for triggering in situ data collections. The third is being integrated into the XChem fragment-based drug-discovery screening platform, also at DLS, to allow the automatic targeting of acoustic compound dispensing into crystallization droplets.},
+  doi        = {10.1107/S2059798324009276},
+  pmcid      = {PMC11448919},
+  pmid       = {39361357},
+  shorttitle = {{CHiMP}},
+  url        = {https://pmc.ncbi.nlm.nih.gov/articles/PMC11448919/},
+  urldate    = {2025-11-27},
+}
+
+ 
+@Misc{Devlin2019,
+  month        = may,
+  note         = {arXiv:1810.04805 [cs]},
+  title        = {{BERT}: {Pre}-training of {Deep} {Bidirectional} {Transformers} for {Language} {Understanding}},
+  year         = {2019},
+  abstract     = {We introduce a new language representation model called BERT, which stands for Bidirectional Encoder Representations from Transformers. Unlike recent language representation models, BERT is designed to pre-train deep bidirectional representations from unlabeled text by jointly conditioning on both left and right context in all layers. As a result, the pre-trained BERT model can be fine-tuned with just one additional output layer to create state-of-the-art models for a wide range of tasks, such as question answering and language inference, without substantial task-specific architecture modifications. BERT is conceptually simple and empirically powerful. It obtains new state-of-the-art results on eleven natural language processing tasks, including pushing the GLUE score to 80.5\% (7.7\% point absolute improvement), MultiNLI accuracy to 86.7\% (4.6\% absolute improvement), SQuAD v1.1 question answering Test F1 to 93.2 (1.5 point absolute improvement) and SQuAD v2.0 Test F1 to 83.1 (5.1 point absolute improvement).},
+  collaborator = {Devlin, Jacob and Chang, Ming-Wei and Lee, Kenton and Toutanova, Kristina},
+  doi          = {10.48550/arXiv.1810.04805},
+  file         = {Preprint PDF:2019 - BERT_ Pre Training of Deep Bidirectional Transformers for Language Understanding.pdf:PDF:http\://arxiv.org/pdf/1810.04805v2},
+  keywords     = {Computer Science - Computation and Language},
+  publisher    = {arXiv},
+  url          = {http://arxiv.org/abs/1810.04805},
+  urldate      = {2025-11-27},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
