Finish first writing session :=)

--- a/Misc/acronyms.tex
+++ b/Misc/acronyms.tex
@@ -15,3 +15,9 @@
 \newacronym{esm}{ESM}{Evolutionary Scale Model}
 
 \newacronym{bert}{BERT}{Bidirectional Encoder Representations from Transformers}
+
+\newacronym{sasa}{SASA}{solvent-accessible surface area}
+
+\newacronym{masif}{MaSIF}{molecular surface interaction fingerprinting}
+
+\newacronym{dmasif}{dMaSIF}{differentiable molecular surface interaction fingerprinting}
