--- a/references.bib
+++ b/references.bib
@@ -626,11 +626,12 @@
 }
 
  
-@Misc{Devlin2019,
-  month        = may,
-  note         = {arXiv:1810.04805 [cs]},
+@Article{Devlin2019,
+  author       = {Jacob Devlin, Ming-Wei Chang, Kenton Lee, Kristina Toutanova},
   title        = {{BERT}: {Pre}-training of {Deep} {Bidirectional} {Transformers} for {Language} {Understanding}},
   year         = {2019},
+  month        = may,
+  note         = {arXiv:1810.04805 [cs]},
   abstract     = {We introduce a new language representation model called BERT, which stands for Bidirectional Encoder Representations from Transformers. Unlike recent language representation models, BERT is designed to pre-train deep bidirectional representations from unlabeled text by jointly conditioning on both left and right context in all layers. As a result, the pre-trained BERT model can be fine-tuned with just one additional output layer to create state-of-the-art models for a wide range of tasks, such as question answering and language inference, without substantial task-specific architecture modifications. BERT is conceptually simple and empirically powerful. It obtains new state-of-the-art results on eleven natural language processing tasks, including pushing the GLUE score to 80.5\% (7.7\% point absolute improvement), MultiNLI accuracy to 86.7\% (4.6\% absolute improvement), SQuAD v1.1 question answering Test F1 to 93.2 (1.5 point absolute improvement) and SQuAD v2.0 Test F1 to 83.1 (5.1 point absolute improvement).},
   collaborator = {Devlin, Jacob and Chang, Ming-Wei and Lee, Kenton and Toutanova, Kristina},
   doi          = {10.48550/arXiv.1810.04805},
@@ -639,6 +640,90 @@
   publisher    = {arXiv},
   url          = {http://arxiv.org/abs/1810.04805},
   urldate      = {2025-11-27},
+}
+
+ 
+@Article{Belapure2023,
+  author     = {Belapure, Jaydeep and Sorokina, Marija and Kastritis, Panagiotis L.},
+  journal    = {Protein Science : A Publication of the Protein Society},
+  title      = {{IRAA}: {A} statistical tool for investigating a protein–protein interaction interface from multiple structures},
+  year       = {2023},
+  issn       = {0961-8368},
+  month      = jan,
+  number     = {1},
+  pages      = {e4523},
+  volume     = {32},
+  abstract   = {Understanding protein–protein interactions (PPIs) is fundamental to infer how different molecular systems work. A major component to model molecular recognition is the buried surface area (BSA), that is, the area that becomes inaccessible to solvent upon complex formation. To date, many attempts tried to connect BSA to molecular recognition principles, and in particular, to the underlying binding affinity. However, the most popular approach to calculate BSA is to use a single (or in some cases few) bound structures, consequently neglecting a wealth of structural information of the interacting proteins derived from ensembles corresponding to their unbound and bound states. Moreover, the most popular method inherently assumes the component proteins to bind as rigid entities. To address the above shortcomings, we developed a Monte Carlo method‐based Interface Residue Assessment Algorithm (IRAA), to calculate a combined distribution of BSA for a given complex. Further, we apply our algorithm to human ACE2 and SARS‐CoV‐2 Spike protein complex, a system of prime importance. Results show a much broader distribution of BSA compared to that obtained from only the bound structure or structures and extended residue members of the interface with implications to the underlying biomolecular recognition. We derive that specific interface residues of ACE2 and of S‐protein are consistently highly flexible, whereas other residues systematically show minor conformational variations. In effect, IRAA facilitates the use of all available structural data for any biomolecular complex of interest, extracting quantitative parameters with statistical significance, thereby providing a deeper biophysical understanding of the molecular system under investigation.},
+  doi        = {10.1002/pro.4523},
+  pmcid      = {PMC9793972},
+  pmid       = {36454539},
+  shorttitle = {{IRAA}},
+  url        = {https://pmc.ncbi.nlm.nih.gov/articles/PMC9793972/},
+  urldate    = {2025-11-28},
+}
+
+ 
+@Article{Shrake1973,
+  author   = {Shrake, A. and Rupley, J. A.},
+  journal  = {Journal of Molecular Biology},
+  title    = {Environment and exposure to solvent of protein atoms. {Lysozyme} and insulin},
+  year     = {1973},
+  issn     = {0022-2836},
+  month    = sep,
+  number   = {2},
+  pages    = {351--371},
+  volume   = {79},
+  abstract = {A computer program is described for calculating the environment and the exposure to solvent of atoms of a protein. The computation is based on the atomic co-ordinates of the protein and on assumptions like those of Lee \& Richards (1971). Results for lysozyme and insulin are presented. Changes in exposure to solvent and in the nature of contacts that develop through folding, association reactions and crystallization are described numerically. The computations suggest several generalizations. (a) Lattice contacts within the protein crystal are characterized by a significantly smaller involvement of non-polar side chains and a proportionately greater involvement of ionizable side chains than is found for protein folding or for protein association reactions important for biological function, (b) In helical regions the carbonyl oxygen of the first residue in the helix has high probability of being shielded from solvent, (c) Glycine is among the residues having exposure least affected by folding; this accords with the expectation that it lies at bends of the peptide chain on the surface of the molecule.},
+  doi      = {10.1016/0022-2836(73)90011-9},
+  file     = {ScienceDirect Full Text PDF:https\://www.sciencedirect.com/science/article/pii/0022283673900119/pdf?md5=3895ee6e9c4ab6f65bbd1c60464b4533&pid=1-s2.0-0022283673900119-main.pdf&isDTMRedir=Y:application/pdf},
+  url      = {https://www.sciencedirect.com/science/article/pii/0022283673900119},
+  urldate  = {2025-11-28},
+}
+
+ 
+@Article{Gainza2020,
+  author    = {Gainza, P. and Sverrisson, F. and Monti, F. and Rodolà, E. and Boscaini, D. and Bronstein, M. M. and Correia, B. E.},
+  journal   = {Nature Methods},
+  title     = {Deciphering interaction fingerprints from protein molecular surfaces using geometric deep learning},
+  year      = {2020},
+  issn      = {1548-7105},
+  month     = feb,
+  number    = {2},
+  pages     = {184--192},
+  volume    = {17},
+  abstract  = {Predicting interactions between proteins and other biomolecules solely based on structure remains a challenge in biology. A high-level representation of protein structure, the molecular surface, displays patterns of chemical and geometric features that fingerprint a protein’s modes of interactions with other biomolecules. We hypothesize that proteins participating in similar interactions may share common fingerprints, independent of their evolutionary history. Fingerprints may be difficult to grasp by visual analysis but could be learned from large-scale datasets. We present MaSIF (molecular surface interaction fingerprinting), a conceptual framework based on a geometric deep learning method to capture fingerprints that are important for specific biomolecular interactions. We showcase MaSIF with three prediction challenges: protein pocket-ligand prediction, protein–protein interaction site prediction and ultrafast scanning of protein surfaces for prediction of protein–protein complexes. We anticipate that our conceptual framework will lead to improvements in our understanding of protein function and design.},
+  copyright = {2019 The Author(s), under exclusive licence to Springer Nature America, Inc.},
+  doi       = {10.1038/s41592-019-0666-6},
+  file      = {Full Text PDF:Gainza2020 - Deciphering Interaction Fingerprints from Protein Molecular Surfaces Using Geometric Deep Learning.pdf:PDF:https\://www.nature.com/articles/s41592-019-0666-6.pdf},
+  keywords  = {Machine learning, Protein function predictions, Protein structure predictions, Proteins},
+  language  = {en},
+  publisher = {Nature Publishing Group},
+  url       = {https://www.nature.com/articles/s41592-019-0666-6},
+  urldate   = {2025-11-28},
+}
+
+@Misc{Yan2023,
+  author        = {Siming Yan and Zhenpei Yang and Haoxiang Li and Chen Song and Li Guan and Hao Kang and Gang Hua and Qixing Huang},
+  title         = {Implicit Autoencoder for Point-Cloud Self-Supervised Representation Learning},
+  year          = {2023},
+  archiveprefix = {arXiv},
+  eprint        = {2201.00785},
+  primaryclass  = {cs.CV},
+  url           = {https://arxiv.org/abs/2201.00785},
+}
+
+ 
+@Article{Wang2022,
+  author   = {Wang, Liang and Yang, Nan and Huang, Xiaolong and Jiao, Binxing and Yang, Linjun and Jiang, Daxin and Majumder, Rangan and Wei, Furu},
+  journal  = {ArXiv},
+  title    = {Text {Embeddings} by {Weakly}-{Supervised} {Contrastive} {Pre}-training},
+  year     = {2022},
+  month    = dec,
+  abstract = {This paper presents E5, a family of state-of-the-art text embeddings that transfer well to a wide range of tasks. The model is trained in a contrastive manner with weak supervision signals from our curated large-scale text pair dataset (called CCPairs). E5 can be readily used as a general-purpose embedding model for any tasks requiring a single-vector representation of texts such as retrieval, clustering, and classification, achieving strong performance in both zero-shot and fine-tuned settings. We conduct extensive evaluations on 56 datasets from the BEIR and MTEB benchmarks. For zero-shot settings, E5 is the first model that outperforms the strong BM25 baseline on the BEIR retrieval benchmark without using any labeled data. When fine-tuned, E5 obtains the best results on the MTEB benchmark, beating existing embedding models with 40x more parameters.},
+  annote   = {[TLDR] E5 is the first model that outperforms the strong BM25 baseline on the BEIR retrieval benchmark without using any labeled data, and when fine-tuned, E5 obtains the best results on the MTEB benchmark, beating existing embedding models with 40x more parameters.},
+  file     = {Full Text PDF:Wang2022 - Text Embeddings by Weakly Supervised Contrastive Pre Training.pdf:PDF:https\://arxiv.org/pdf/2212.03533.pdf},
+  url      = {https://www.semanticscholar.org/paper/Text-Embeddings-by-Weakly-Supervised-Contrastive-Wang-Yang/5a3c1afe73d8bcc8288d17cb17be2baec8a98464},
+  urldate  = {2025-11-28},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
