Add theory session and add binding site input to methodology

--- a/Misc/acronyms.tex
+++ b/Misc/acronyms.tex
@@ -5,6 +5,7 @@
 \newacronym{pdb}{PDB}{\href{https://www.rcsb.org/}{Protein Data Bank}}
 
 \newacronym{peg}{PEG}{Polyethylene glycol}
+\newacronym{pegmme}{PEG-MME}{Polyethylene glycol Monomethyl Ether}
 
 \newacronym{ks}{KS}{Kolmogorov–Smirnov}
 
@@ -21,3 +22,7 @@
 \newacronym{masif}{MaSIF}{molecular surface interaction fingerprinting}
 
 \newacronym{dmasif}{dMaSIF}{differentiable molecular surface interaction fingerprinting}
+
+\newacronym{pi}{pI}{isoelectric point}
+
+\newacronym{asu}{ASU}{asymmetric unit}
