--- a/references.bib
+++ b/references.bib
@@ -1,4 +1,23 @@
  
+@Article{Rubinson2000,
+  author     = {Rubinson, K. A. and Ladner, J. E. and Tordova, M. and Gilliland, G. L.},
+  journal    = {Acta Crystallographica. Section D, Biological Crystallography},
+  title      = {Cryosalts: suppression of ice formation in macromolecular crystallography},
+  year       = {2000},
+  issn       = {0907-4449},
+  month      = aug,
+  number     = {Pt 8},
+  pages      = {996--1001},
+  volume     = {56},
+  abstract   = {Quality data collection for macromolecular cryocrystallography requires suppressing the formation of crystalline or microcrystalline ice that may result from flash-freezing crystals. Described here is the use of lithium formate, lithium chloride and other highly soluble salts for forming ice-ring-free aqueous glasses upon cooling from ambient temperature to 100 K. These cryosalts are a new class of cryoprotectants that are shown to be effective with a variety of commonly used crystallization solutions and with proteins crystallized under different conditions. The influence of cryosalts on crystal mosaicity and diffraction resolution is comparable with or superior to traditional organic cryoprotectants.},
+  doi        = {10.1107/s0907444900007587},
+  keywords   = {Cryoprotective Agents, Crystallography, X-Ray, Formates, Freezing, Ice, Lithium Chloride, Macromolecular Substances, Muramidase, Ribonucleases, Salts},
+  language   = {eng},
+  pmid       = {10944336},
+  shorttitle = {Cryosalts},
+}
+
+ 
 @Article{Mall2025,
   author    = {Mall, Raghvendra and Kaushik, Rahul and Martinez, Zachary A. and Thomson, Matt W. and Castiglione, Filippo},
   journal   = {Scientific Reports},
@@ -724,6 +743,41 @@
   file     = {Full Text PDF:Wang2022 - Text Embeddings by Weakly Supervised Contrastive Pre Training.pdf:PDF:https\://arxiv.org/pdf/2212.03533.pdf},
   url      = {https://www.semanticscholar.org/paper/Text-Embeddings-by-Weakly-Supervised-Contrastive-Wang-Yang/5a3c1afe73d8bcc8288d17cb17be2baec8a98464},
   urldate  = {2025-11-28},
+}
+
+@Book{Bergfors2009,
+  author    = {Bergfors, Terese M},
+  publisher = {Internat'l University Line},
+  title     = {Protein crystallization},
+  year      = {2009},
+}
+
+@Book{Rupp2009,
+  author    = {Rupp, Bernhard},
+  publisher = {Garland Science},
+  title     = {Biomolecular crystallography: principles, practice, and application to structural biology},
+  year      = {2009},
+}
+
+@Article{Bijelic2018,
+  author  = {Bijelic, Aleksandar and Rompel, Annette},
+  journal = {ChemTexts},
+  title   = {Polyoxometalates: more than a phasing tool in protein crystallography},
+  year    = {2018},
+  month   = {08},
+  volume  = {4},
+  doi     = {10.1007/s40828-018-0064-1},
+}
+
+@Article{Yuan2023,
+  author    = {Yuan, Mingzhi and Shen, Ao and Fu, Kexue and Guan, Jiaming and Ma, Yingfan and Qiao, Qin and Wang, Manning},
+  journal   = {Bioinformatics},
+  title     = {ProteinMAE: masked autoencoder for protein surface self-supervised learning},
+  year      = {2023},
+  number    = {12},
+  pages     = {btad724},
+  volume    = {39},
+  publisher = {Oxford University Press},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
